--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "mocha test/**/*.test.js"
+    "test": "mocha test/**/*.test.js",
+    "seed:admin": "node scripts/seed-admin.js",
+    "seed:admin:interactive": "node scripts/seed-admin.js --interactive",
+    "seed:demo": "node scripts/seed-demo-data.js"
   },
   "dependencies": {
     "express": "^4.18.2",
